--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% block title %}Task manager{% endblock %}
 {% block content %}
-<h1>Hello!</h1>
+<h1>Менеджер задач Хекслет</h1>
 {% endblock %}
