--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+{# Load the tag library #}
+{% load bootstrap4 %}
+
+{# Load CSS and JavaScript #}
+{% bootstrap_css %}
+{% bootstrap_javascript jquery='full' %}
+
+{# Display django.contrib.messages as Bootstrap alerts #}
+{% bootstrap_messages %}
+
+{% load i18n %}
 
 <head>
     <meta charset="UTF-8">
@@ -9,7 +18,33 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <a class="navbar-brand" href="#">{% translate 'Task manager' %}</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">{% translate 'Users' %}</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav">
+                <li  class="nav-item">
+                    <a class="nav-link" href="#">{% translate 'Log in' %}</a>
+                </li>
+                <li  class="nav-item">
+                    <a class="nav-link" href="#">{% translate 'Register' %}</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     {% block content %}{% endblock %}
+    <footer class="footer mt-auto py-3">
+        <div class="container">
+            <a target="_blank" href="#">Hexlet</a>
+        </div>
+    </footer>
 </body>
 
 </html>
