Playing with templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -56,9 +56,9 @@
         </div>
     </nav>
     {% block content %}{% endblock %}
-    <footer class="footer mt-auto py-3">
-        <div class="container">
-            <a target="_blank" href="#">Hexlet</a>
+    <footer>
+        <div class="container my-5 pt-4 border-top">
+            <a target="_blank" href="https://ru.hexlet.io">Hexlet</a>
         </div>
     </footer>
 </body>
