--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="container wrapper flex-grow-1">
     <div class="card">
-        <div class="card-body p-5 bg-dark">
+        <div class="card-body p-5 bg-light">
             <div class="display-4">{% translate 'Hello from Hexlet!' %}</div>
             <p class="lead">{% translate 'Practical programming courses' %}</p>
             <hr>
