Playing with templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 {% load i18n %}
 
 <head>
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% translate 'Task manager' %}</title>
     <style>
         .bd-placeholder-img {
             font-size: 1.125rem;
