--- a/templates/base.html
+++ b/templates/base.html
@@ -39,15 +39,18 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">{% translate 'Users' %}</a>
+                    <a class="nav-link" href="{% url 'users:list' %}">{% translate 'Users' %}</a>
                 </li>
             </ul>
             <ul class="navbar-nav">
                 <li  class="nav-item">
-                    <a class="nav-link" href="#">{% translate 'Log in' %}</a>
+                    <a class="nav-link" href="{% url 'login' %}">{% translate 'Log in' %}</a>
                 </li>
                 <li  class="nav-item">
-                    <a class="nav-link" href="#">{% translate 'Register' %}</a>
+                    <a class="nav-link" href="{% url 'logout' %}">{% translate 'Log out' %}</a>
+                </li>
+                <li  class="nav-item">
+                    <a class="nav-link" href="{% url 'users:create' %}">{% translate 'Register' %}</a>
                 </li>
             </ul>
         </div>
