--- a/templates/form.html
+++ b/templates/form.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% load bootstrap4 %}
 {% block title %}{{ title }}{% endblock %}
 {% block content %}
 <form method="post">
