--- a/templates/users.html
+++ b/templates/users.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% load static %}
 {% block title %}{{ title }}{% endblock %}
 {% block content %}
 <div class="container wrapper flex-grow-1">
