--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,9 @@
             </ul>
         </div>
     </nav>
-    {% block content %}{% endblock %}
+    <div class="container wrapper flex-grow-1">
+        {% block content %}{% endblock %}
+    </div>
     <footer>
         <div class="container my-5 pt-4 border-top">
             <a target="_blank" href="https://ru.hexlet.io">Hexlet</a>
