--- a/templates/delete.html
+++ b/templates/delete.html
@@ -6,7 +6,13 @@
 <form method="post">
     {% csrf_token %}
     <h1 class="my-4">{{ title }}</h1>
-    <p>{% translate "Are you sure you want to delete" %} {{ object.first_name }} {{ object.last_name }} ?</p>
+    <p>{% translate "Are you sure you want to delete" %}
+        {% if object.first_name %}
+            {{ object.first_name }} {{ object.last_name }} ?
+        {% else %}
+            {{ object.name }} ?
+        {% endif %}
+    </p>
     {% bootstrap_button button_text button_type="submit" button_class="btn-danger" %}
 </form>
 {% endblock %}
