--- a/templates/base.html
+++ b/templates/base.html
@@ -46,6 +46,9 @@
                         <a class="nav-link" href="{% url 'statuses:list' %}">{% translate 'Statuses' %}</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{% url 'labels:list' %}">{% translate 'Labels' %}</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{% url 'tasks:list' %}">{% translate 'Tasks' %}</a>
                     </li>
                 {% endif %}
