--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% load bootstrap4 %}
 {% load static %}
 {% block title %}{{ title }}{% endblock %}
 {% block content %}
@@ -8,6 +9,17 @@
         <div class="card-body p-5 bg-light mt-5 pt-4 pb-16">
             <h1 class="my-4">{{ title }}</h1>
             <a class="nav-link" href="{% url 'tasks:create' %}">{% translate "Create a task" %}</a>
+
+            <div class="card mb-3">
+                <div class="card-body bg-dark text-light">
+                    <form class="form-inline center my-auto" method="get">
+                        {% csrf_token %}
+                        {% bootstrap_form filter.form form_group_class="form-group" field_class="ml-2 mr-3" %}
+                        {% bootstrap_button button_text button_type="submit" button_class="btn-primary" %}
+                    </form>
+                </div>
+            </div>
+
             <table class="table table-striped">
                 <thead>
                     <tr>
