--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,36 @@
             </ul>
         </div>
     </nav>
+
+    <!--flash-messages-->
+    <div class="container">
+        <div class="row">
+          <div class="col-md-8 mx-auto my-2">
+            {% if messages %}
+                {% for message in messages %}
+                    {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %} 
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                      {{ message }}
+                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    {% else %}
+                    <div class="alert alert-success alert-dismissible fade show" role="alert">
+                      {{ message }}
+                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    {% endif %}
+                </li>
+                {% endfor %}
+            </ul>
+            {% endif %}
+          </div>
+        </div>
+    </div>
+
     <div class="container wrapper flex-grow-1">
         {% block content %}{% endblock %}
     </div>
