--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% load i18n %}
+{% load bootstrap4 %}
+{% bootstrap_messages %}
 {% block title %}Task manager{% endblock %}
 {% block content %}
 <div class="container wrapper flex-grow-1">
