--- a/templates/labels.html
+++ b/templates/labels.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load i18n %}
 {% load static %}
+{% load bootstrap4 %}
+{% bootstrap_messages %}
 {% block title %}{{ title }}{% endblock %}
 {% block content %}
 <div class="container wrapper flex-grow-1">
