--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load i18n %}
 {% load bootstrap4 %}
+{% bootstrap_messages %}
 {% load static %}
 {% block title %}{{ title }}{% endblock %}
 {% block content %}
