--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
                     <a class="nav-link" href="{% url 'login' %}">{% translate 'Log in' %}</a>
                 </li>
                 <li  class="nav-item">
-                    <a class="nav-link" href="{% url 'users:create' %}">{% translate 'Register' %}</a>
+                    <a class="nav-link" href="{% url 'users:create' %}">{% translate 'Sign up' %}</a>
                 </li>
                 {% endif %}
             </ul>
