--- a/templates/users.html
+++ b/templates/users.html
@@ -15,7 +15,7 @@
                         <th>ID</th>
                         <th>{% translate "User name" %}</th>
                         <th>{% translate "Full name" %}</th>
-                        <th>{% translate "Creation date" %}</th>
+                        <th>{% translate "Created at" %}</th>
                         <th></th>
                     </tr>
                 </thead>
