Rename field executive->executor

--- a/templates/task_view.html
+++ b/templates/task_view.html
@@ -23,7 +23,7 @@
                         </div>
                         <div class="row p-1">
                             <div class="col">{% translate "Executive" %}</div>
-                            <div class="col">{{ task_view.executive }}</div>
+                            <div class="col">{{ task_view.executor }}</div>
                         </div>
                         <div class="row p-1">
                             <div class="col">{% translate "Status" %}</div>
